--- a/Examples/FourFermi/CMakeLists.txt
+++ b/Examples/FourFermi/CMakeLists.txt
@@ -9,3 +9,4 @@ setup_application(FourFermi flows)
 add_flows(FourFermi flows)
 
 execute_process(COMMAND ${CMAKE_COMMAND} "-E" "create_symlink" "${CMAKE_CURRENT_SOURCE_DIR}/parameter.json" "${CMAKE_CURRENT_BINARY_DIR}/parameter.json")
+execute_process(COMMAND ${CMAKE_COMMAND} "-E" "create_symlink" "${CMAKE_CURRENT_SOURCE_DIR}/external_data" "${CMAKE_CURRENT_BINARY_DIR}/external_data")
