feat: add autoformatting target
Signed-off-by: Franz R. Sattler <sattler@thphys.uni-heidelberg.de>

--- a/DiFfRG/CMakeLists.txt
+++ b/DiFfRG/CMakeLists.txt
@@ -106,7 +106,7 @@ install(
   DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/DiFfRG")
 
 # ##############################################################################
-# Wrap up
+# licenses
 # ##############################################################################
 
 set(CPM_PACKAGE_deal.II_SOURCE_DIR
@@ -126,3 +126,24 @@ message("packages: ${CPM_PACKAGES};deal.II;sundials;boost")
 cpm_licenses_create_disclaimer_target(
   write-licenses "${CMAKE_CURRENT_SOURCE_DIR}/../third_party.txt"
   "${CPM_PACKAGES};deal.II;sundials;boost")
+
+# ##############################################################################
+# other scripts
+# ##############################################################################
+
+cpmaddpackage("gh:StableCoder/cmake-scripts#24.04")
+
+include(${cmake-scripts_SOURCE_DIR}/formatting.cmake)
+
+file(GLOB_RECURSE headers CONFIGURE_DEPENDS
+     "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hh")
+file(GLOB_RECURSE sources CONFIGURE_DEPENDS
+     "${CMAKE_CURRENT_SOURCE_DIR}/source/*.cc")
+file(GLOB_RECURSE cuda_sources CONFIGURE_DEPENDS
+     "${CMAKE_CURRENT_SOURCE_DIR}/source/*.cu")
+
+clang_format(TARGET_NAME ${headers} ${sources} ${cuda_sources})
+
+file(GLOB_RECURSE CMAKE_FILES CMakeLists.txt)
+
+cmake_format(TARGET_NAME ${CMAKE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/setup_build_system.cmake)
