--- a/Examples/YangMills/SP/CMakeLists.txt
+++ b/Examples/YangMills/SP/CMakeLists.txt
@@ -2,13 +2,11 @@ cmake_minimum_required(VERSION 3.26.4)
 
 project(YangMills)
 
-# find_package(DiFfRG REQUIRED HINTS /opt/DiFfRG/)
-find_package(DiFfRG REQUIRED HINTS ../../../DiFfRG_install/)
+find_package(DiFfRG REQUIRED HINTS /opt/DiFfRG/)
 
 add_executable(Yang-Mills Yang-Mills.cc)
 setup_application(Yang-Mills)
 add_flows(Yang-Mills flows)
-set_property(TARGET Yang-Mills PROPERTY CUDA_SEPARABLE_COMPILATION ON)
 
 execute_process(
   COMMAND
