Removed LTO optimization in Compiler flags

--- a/config
+++ b/config
@@ -11,10 +11,10 @@
 #   export CXX_FLAGS="-march=core-avx2 -fPIC"
 #   export C_FLAGS="-march=core-avx2 -fPIC"
 #   export CUDA_FLAGS="-arch=sm_35"
-export CXX_FLAGS="-march=native -fPIC -flto=auto" 
-# -flto=auto"
-export C_FLAGS="-march=native -fPIC -flto=auto"
-# -flto=auto"
+# export CXX_FLAGS="-march=native -fPIC -flto=auto" 
+export CXX_FLAGS="-march=native -fPIC"
+# export C_FLAGS="-march=native -fPIC -flto=auto"
+export C_FLAGS="-march=native -fPIC"
 export CUDA_FLAGS="-arch=native -use_fast_math"
 
 # Configure linker flags for the current machine. By default, we use the gold linker
