--- a/DiFfRG/tests/common/quadrature/CMakeLists.txt
+++ b/DiFfRG/tests/common/quadrature/CMakeLists.txt
@@ -7,3 +7,6 @@ setup_test(test_diagonalization)
 
 add_executable(test_quadrature test_quadrature.cc)
 setup_test(test_quadrature)
+
+add_executable(test_matsubara test_matsubara.cc)
+setup_test(test_matsubara)
