Fixed some CMakeLists.txt for the Examples
Signed-off-by: Franz R Sattler <sattler@thphys.uni-heidelberg.de>

--- a/Examples/ONfiniteT/CMakeLists.txt
+++ b/Examples/ONfiniteT/CMakeLists.txt
@@ -9,8 +9,7 @@ project(ONfiniteT LANGUAGES CXX)
 if(NOT DEFINED DiFfRG_DIR)
   set(DiFfRG_DIR /opt/DiFfRG)
 endif()
-# find_package(DiFfRG REQUIRED HINTS ${DiFfRG_DIR})
-find_package(DiFfRG REQUIRED HINTS ../../DiFfRG_install)
+find_package(DiFfRG REQUIRED HINTS ${DiFfRG_DIR})
 
 add_subdirectory(flows)
 
