--- a/Examples/YangMills/SP/CMakeLists.txt
+++ b/Examples/YangMills/SP/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.26.4)
 
 project(YangMills)
 
-find_package(DiFfRG REQUIRED HINTS /opt/DiFfRG/)
+find_package(DiFfRG REQUIRED HINTS /opt/DiFfRG_1.0/)
 
 add_executable(Yang-Mills Yang-Mills.cc)
 setup_application(Yang-Mills)
