implemented check, whether a logger exists before building it

--- a/DiFfRG/tests/common/CMakeLists.txt
+++ b/DiFfRG/tests/common/CMakeLists.txt
@@ -10,6 +10,9 @@ setup_test(test_configuration_helper)
 add_executable(test_cpu_complex_autodiff test_cpu_complex_autodiff.cc)
 setup_test(test_cpu_complex_autodiff)
 
+add_executable(test_logger test_logger.cc)
+setup_test(test_logger)
+
 if(USE_CUDA)
   add_executable(test_gpu_autodiff test_gpu_autodiff.cu)
   setup_test(test_gpu_autodiff)
